<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/margin16"
	tools:context="com.example.firestore.QueryActivity">

	<ScrollView
		android:id="@+id/body"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/zone_button"
		android:scrollbars="none">

		<TextView
			android:id="@+id/tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"/>

	</ScrollView>

	<LinearLayout
		android:id="@+id/zone_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/margin16"
		android:layout_alignParentBottom="true"
		android:orientation="vertical">

		<Button
			android:id="@+id/btn_add_sample"
			style="@style/MyButton"
			android:text="@string/btn_add_sample"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/btn_realtime_doc"
				style="@style/MyButton"
				android:text="@string/btn_realtime_doc"/>

			<Button
				android:id="@+id/btn_realtime_multi_doc"
				style="@style/MyButton"
				android:text="@string/btn_realtime_multi_doc"/>

		</LinearLayout>

	</LinearLayout>

</RelativeLayout>
